Fixed z-index between nav links and cart button wrapper

--- a/src/styles/components/cart.scss
+++ b/src/styles/components/cart.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  z-index: 1;
 }
 
 .cart {
