--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -25,6 +25,7 @@ header {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 2;
   }
   &.bcg-black {
     background-color: $clr-primary;
