--- a/src/styles/globals/boilerplate.scss
+++ b/src/styles/globals/boilerplate.scss
@@ -66,6 +66,7 @@ p {
   color: white;
   font-size: $heading-medium;
   font-weight: 700;
+  z-index: 2;
 }
 
 .tag {
